[gd_scene load_steps=9 format=3 uid="uid://crkhff3yoebjt"]

[ext_resource type="Script" path="res://dreamlands/kafkatrask/trasker.gd" id="1_xkw2b"]
[ext_resource type="Texture2D" uid="uid://c62mpdq57t84s" path="res://media/trask.png" id="2_fmkda"]
[ext_resource type="Script" path="res://navdi4/main/navdisheetsprite.gd" id="3_87d58"]
[ext_resource type="Resource" uid="uid://hi5tmej2ht5m" path="res://media/trask_sheet.tres" id="4_g8tfv"]
[ext_resource type="Script" path="res://navdi4/main/navdibodymover.gd" id="5_0eo0y"]
[ext_resource type="Script" path="res://navdi4/main/navdibodymazer.gd" id="6_noevi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33vmo"]
size = Vector2(4, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrs0w"]
size = Vector2(2, 2)

[node name="trasker" type="Node2D"]
position = Vector2(38, 135)
script = ExtResource("1_xkw2b")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(0.180392, 0.203922, 0.168627, 1)

[node name="SheetSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_fmkda")
hframes = 10
vframes = 10
frame = 4
script = ExtResource("3_87d58")
sheet = ExtResource("4_g8tfv")
frames = PackedInt32Array(4)

[node name="NavdiBodyMover" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("5_0eo0y")

[node name="ShapeCast2D" type="ShapeCast2D" parent="NavdiBodyMover"]
shape = SubResource("RectangleShape2D_33vmo")
target_position = Vector2(0, 0)

[node name="FloorCast" type="ShapeCast2D" parent="NavdiBodyMover"]
shape = SubResource("RectangleShape2D_33vmo")
target_position = Vector2(0, 0)
collision_mask = 257

[node name="NavdiBodyMazer" type="Marker2D" parent="."]
script = ExtResource("6_noevi")

[node name="pzone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="pzone"]
shape = SubResource("RectangleShape2D_yrs0w")
